[tool.poetry]
name = "traffic-fix"
version = "0.1.0"
description = ""
authors = ["Jonathan Breidfjord <jbreidfjord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
numpy = "^1.22.3"
tensorflow-macos = "^2.8.0"
keras = "^2.8.0"
matplotlib = "^3.5.1"
tensorflow-datasets = "^4.5.2"
black = "^22.3.0"
isort = "^5.10.1"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
tensorflow-metal = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
